made it nice for various devices

--- a/readingright/romance.html
+++ b/readingright/romance.html
@@ -20,7 +20,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/Heart-Background.jpg" alt="Heart Background">
+            <img id="hero-img" src="images/rsz_heart-background.jpg" alt="Heart Background">
         </div>
         <section id="hero-msg">
             <h1 class="rtitle">ROMANCE</h1>
