--- a/readingright/site-plan.html
+++ b/readingright/site-plan.html
@@ -73,7 +73,7 @@
         <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Nunito Sans  
+        Paragraph Font: Playpen Sans  
         <!-- change this -->
       </h4>
       <h3>
