--- a/readingright/emilyofnewmoon.html
+++ b/readingright/emilyofnewmoon.html
@@ -22,6 +22,8 @@
         <a href="emilyclimbs.html" id="next">Next Summary &raquo;</a>
         <h2>Emily of New Moon</h2>
         <p>[Summary]</p>  
+        <a class="bbutton" href="historical.html">Historical</a>
+        <a class="bbutton" href="index.html">Home</a>
     </main>
     <footer>
         <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
