--- a/readingright/emma.html
+++ b/readingright/emma.html
@@ -23,6 +23,8 @@
         <a href="prideandprejudice.html" id="next">Next Summary &raquo;</a> 
         <h2>Emma</h2> 
         <p>[Summary]</p>
+        <a class="bbutton" href="historical.html">Historical</a>
+        <a class="bbutton" href="index.html">Home</a>
     </main>
     <footer>
         <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
