--- a/readingright/prideandprejudice.html
+++ b/readingright/prideandprejudice.html
@@ -21,7 +21,9 @@
         <a href="emma.html" id="previous">&laquo; Previous Summary</a>
         <a href="persuasion.html" id="next">Next Summary &raquo;</a>
         <h2>Pride and Prejudice</h2>
-        <p>[Summary]</p>  
+        <p>[Summary]</p> 
+        <a class="bbutton" href="historical.html">Historical</a>
+        <a class="bbutton" href="index.html">Home</a> 
     </main>
     <footer>
         <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
