--- a/readingright/thebluecastle.html
+++ b/readingright/thebluecastle.html
@@ -22,6 +22,8 @@
         <a id="void">Next Summary &raquo;</a>
         <h2>The Blue Castle</h2>
         <p>[Summary]</p>  
+        <a class="bbutton" href="historical.html">Historical</a>
+        <a class="bbutton" href="index.html">Home</a>
     </main>
     <footer>
         <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
