--- a/readingright/thegentlemanandthethief.html
+++ b/readingright/thegentlemanandthethief.html
@@ -22,6 +22,8 @@
         <a href="#" id="next">Next Summary &raquo;</a>
         <h2>The Gentleman and the Thief</h2>
         <p>[Summary]</p>  
+        <a class="bbutton" href="romance.html">Romance</a>
+        <a class="bbutton" href="index.html">Home</a>
     </main>
     <footer>
         <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
