--- a/readingright/theladyandthehighwayman.html
+++ b/readingright/theladyandthehighwayman.html
@@ -19,10 +19,12 @@
         </nav> 
     </header>
     <main>
-        <a class="previous1">&laquo; Previous Summary</a>
+        <a id="void">&laquo; Previous Summary</a>
         <a href="thegentlemanandthethief.html" id="next">Next Summary &raquo;</a> 
         <h2>The Lady and the Highwayman</h2> 
         <p>[Summary]</p>
+        <a class="bbutton" href="romance.html">Romance</a>
+        <a class="bbutton" href="index.html">Home</a>
     </main>
     <footer>
         <p>ReadingRight &copy; 2023 - Rose Pulsipher</p>
