added grandchild pages

--- a/readingright/romance.html
+++ b/readingright/romance.html
@@ -37,25 +37,25 @@
             <ul id="first">
             <li><a href="theladyandthehighwayman.html">The Lady and the Highway Man</a></li>
             <li><a href="thegentlemanandthethief.html">The Gentleman and the Thief</a></li>
-            <li><a href="#">The Merchant and the Rogue</a></li>
-            <li><a href="#">The Bachelor and the Bride</a></li>
-            <li><a href="#">The Queen and the Knave</a></li>
+            <li><a href="themerchantandtherogue.html">The Merchant and the Rogue</a></li>
+            <li><a href="thebachelorandthebride.html">The Bachelor and the Bride</a></li>
+            <li><a href="thequeenandtheknave.html">The Queen and the Knave</a></li>
             </ul>
             <h4>Savage Wells</h4>
             <ul>
-            <li><a href="#">The Sheriffs of Savage Wells</a></li>
-            <li><a href="#">Healing Hearts</a></li>
-            <li><a href="#">Wyoming Wild</a></li>
+            <li><a href="thesheriffsofsavagewells.html">The Sheriffs of Savage Wells</a></li>
+            <li><a href="healinghearts.html">Healing Hearts</a></li>
+            <li><a href="wyomingwild.html">Wyoming Wild</a></li>
             </ul>
             <h4>Hope Springs</h4>
             <ul>
-            <li><a href="#">Longing For Home</a></li>
-            <li><a href="#">Longing For Home: Hope Springs</a></li>
-            <li><a href="#">Love Remains</a></li>
-            <li><a href="#">My Dearest Love</a></li>
-            <li><a href="#">Long Journey Home</a></li>
-            <li><a href="#">Valley of Dreams</a></li>
-            <li><a href="#">Choices of the Heart</a></li>
+            <li><a href="longingforhome.html">Longing For Home</a></li>
+            <li><a href="longingforhome-hopesprings.html">Longing For Home: Hope Springs</a></li>
+            <li><a href="loveremains.html">Love Remains</a></li>
+            <li><a href="mydearestlove.html">My Dearest Love</a></li>
+            <li><a href="longjourneyhome.html">Long Journey Home</a></li>
+            <li><a href="valleyofdreams.html">Valley of Dreams</a></li>
+            <li><a href="choicesoftheheart.html">Choices of the Heart</a></li>
             </ul>
             <h4>Blue Orchid Society</h4>
             <ul>  
