--- a/readingright/thegentlemanandthethief.html
+++ b/readingright/thegentlemanandthethief.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <a href="theladyandthehighwayman.html" id="previous">&laquo; Previous Summary</a>
-        <a href="#" id="next">Next Summary &raquo;</a>
+        <a href="themerchantandtherogue.html" id="next">Next Summary &raquo;</a>
         <h2>The Gentleman and the Thief</h2>
         <p>[Summary]</p>  
         <a class="bbutton" href="romance.html">Romance</a>
