--- a/readingright/themerchantandtherogue.html
+++ b/readingright/themerchantandtherogue.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>The Merchant and the Rogue</title>
 <link rel="stylesheet" href="styles/styles.css">
-<title>The Lady and the Highwayman</title>
 </head>
-<body id="rsummaries">
+<body>
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/Book-Logo.png" alt="Reading Right Logo">
@@ -15,14 +15,13 @@
             <a href="romance.html">Romance</a>
             <a href="historical.html">Historical</a>
             <a href="contactme.html">Contact Me</a>
-        </nav> 
+    </nav> 
     </header>
     <main>
-        <a id="void">&laquo; Previous Summary</a>
-        <a href="thegentlemanandthethief.html" id="next">Next Summary &raquo;</a> 
-        <h1>DREAD PENNY</h1>
-        <h2>The Lady and the Highwayman</h2> 
-        <p>[Summary]</p>
+        <a href="thegentlemanandthethief.html" id="previous">&laquo; Previous Summary</a>
+        <a href="thebachelorandthebride.html" id="next">Next Summary &raquo;</a>
+        <h2>The Merchant and the Rogue</h2>
+        <p>[Summary]</p>  
         <a class="bbutton" href="romance.html">Romance</a>
         <a class="bbutton" href="index.html">Home</a>
     </main>
