--- a/readingright/freckles.html
+++ b/readingright/freckles.html
@@ -5,7 +5,7 @@
 <title>Freckles</title>
 <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
+<body id="hsummaries">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/Book-Logo.png" alt="Reading Right Logo">
