--- a/readingright/longingforhome.html
+++ b/readingright/longingforhome.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Longing for Home</title>
 <link rel="stylesheet" href="styles/styles.css">
-<title>The Lady and the Highwayman</title>
 </head>
 <body id="rsummaries">
     <header>
@@ -15,14 +15,14 @@
             <a href="romance.html">Romance</a>
             <a href="historical.html">Historical</a>
             <a href="contactme.html">Contact Me</a>
-        </nav> 
+    </nav> 
     </header>
     <main>
-        <a id="void">&laquo; Previous Summary</a>
-        <a href="thegentlemanandthethief.html" id="next">Next Summary &raquo;</a> 
-        <h1>DREAD PENNY</h1>
-        <h2>The Lady and the Highwayman</h2> 
-        <p>[Summary]</p>
+        <a href="wyomingwild.html" id="previous">&laquo; Previous Summary</a>
+        <a href="longingforhome-hopesprings.html" id="next">Next Summary &raquo;</a>
+        <h1>HOPE SPRINGS</h1>
+        <h2>Longing for Home</h2>
+        <p>[Summary]</p>  
         <a class="bbutton" href="romance.html">Romance</a>
         <a class="bbutton" href="index.html">Home</a>
     </main>
